Fix, se eliminó el z-index de article blog para acceder a los href

--- a/css/style.css
+++ b/css/style.css
@@ -463,8 +463,8 @@ h5
 
 .article-blog
 {
-    position: relative;
-    z-index: -1;
+    /* position: relative;
+    z-index: -1; */
     display: flex;
     width: 100%;
     height: auto;
@@ -484,7 +484,6 @@ h5
     font-weight: 600;
     padding: 0 10px 2px 10px;
     border-radius: 8px 8px 0 0;
-    background-color: rgba(255, 0, 0, 0.245);
     color: var(--grey1);
     align-items: center;
     justify-content: center;
@@ -572,10 +571,10 @@ h5
     display: flex;
     width: 40%;
     min-width: 64px;
-    height: 40px;
+    height: 33px;
     margin: 20px 0 0 auto;
     padding: 0 20px 2.4px 20px;
-    border-radius: 6px;
+    border-radius: 4px;
     background: var(--white);
     font-size: 14px;
     color: var(--dark);
@@ -803,10 +802,10 @@ h5
     display: flex;
     width: 50%;
     min-width: 64px;
-    height: 40px;
+    height: 33px;
     margin: 20px 0 0 0;
-    padding: 0 20px 2.4px 20px;
-    border-radius: 6px;
+    padding: 0 20px 2px 20px;
+    border-radius: 4px;
     background: var(--white);
     font-size: 14px;
     color: var(--dark);
@@ -881,14 +880,15 @@ h5
     display: flex;
     border: 2px solid var(--white);
     width: auto;
-    height: 40px;
+    height: 33px;
     font-size: 14px;
     font-weight: 600;
     background-color: transparent;
     color: white;
     text-decoration: none;
     margin-top: 10px;
-    border-radius: 6px;
+    padding-bottom: 3px;
+    border-radius: 4px;
     align-items: center;
     justify-content: center;
 
